--- a/wordpress/wp-content/themes/new_theme/src/sass/components/_fonts.scss
+++ b/wordpress/wp-content/themes/new_theme/src/sass/components/_fonts.scss
@@ -9,7 +9,7 @@
 }
 a {
     text-decoration: none;
-    color: $link-color;
+    color: $text-color-black;
     &:hover {
         color: $link-hover-color;
     }
