--- a/wordpress/wp-content/themes/new_theme/src/sass/_variables.scss
+++ b/wordpress/wp-content/themes/new_theme/src/sass/_variables.scss
@@ -1,23 +1,29 @@
 // Colors
-$gray-light : #e0e0e042;
-$background : #f5f5f5;
-$border-color : #467caf;
-$container-bg : #a2b1b9;
+$gray-light : #14131381;
+$background : #f0e4c8;
+$border-color : #4b2322d8;
+$container-bg : #f0e4c8;
+$container-post : #c8d3f0;
+
 
 // text colors shade of black
 $text-color-black : #010911;
 $text-color-black-light : #3a3a3a;
 $text-color-black-dark : rgb(15, 13, 13);
 
+$text-color-post : #f0e4c8;
+
 $link-color : #105aa0;
-$link-hover-color : #481d99;
+$link-hover-color : #5d1bd8;
 
 // Spacing
 $default-margin : 1rem;
 $default-padding : 1rem;
 $item-gap : 20px;
+$max-container-width : 1400px;
+$max-container-width-post : 960px;
 
 // Borders
 $default-border : 1px solid $border-color;
-$border-shadow : 0 0 10px 0 $border-color;
-$default-border-radius : 5px;
+$default-box-shadow : 0 0 15px 0 $gray-light ;
+$default-border-radius : 25px;
