--- a/wordpress/wp-content/themes/tail-test/src/sass/style.scss
+++ b/wordpress/wp-content/themes/tail-test/src/sass/style.scss
@@ -1,1 +1,7 @@
-@import './components/primary_menu.scss';
+@import "./components/primary-menu";
+@import "./components/footer-menu";
+@import "./components/sidebar";
+
+@import "./elements/lines";
+@import "./elements/search-input";
+@import "./fonts";
