--- a/wordpress/wp-content/themes/tail-test/src/sass/style.scss
+++ b/wordpress/wp-content/themes/tail-test/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "./components/primary-menu";
 @import "./components/footer-menu";
 @import "./components/sidebar";
+@import "./components/search-card-container";
 
 @import "./elements/lines";
 @import "./elements/search-input";
